Decompose PythonEmitter, Transformer, and Main into focused files
Apply Parser-style decomposition to the three largest files:
- PythonEmitter (1629→6 files): EmitContext, TypeEmitter, ExprEmitter, StmtEmitter, DeclEmitter
- Transformer (1652→5 files): Context, Expr, Stmt, Decl
- Main (1294→4 files): Main (CLI), JavaCompiler, PythonCompiler, BuildTools

Largest file reduced from 1652 to 664 lines. All 172 tests passing.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>