@@ -13,7 +13,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 
 /**
  * Zinc compiler CLI.
@@ -67,7 +66,7 @@ public class Main {
         Path outDir = null;
         boolean nativeImage = false;
         boolean fatJar = false;
-        boolean packageApp = true; // default: jpackage + jlink (works with any library)
+        boolean packageApp = true;
         boolean docker = false;
         boolean targetPython = false;
 
@@ -97,12 +96,12 @@ public class Main {
         // Check for Mill project
         Path projectDir = null;
         if (Files.isDirectory(inputPath)) {
-            projectDir = findProjectDir(inputPath);
+            projectDir = BuildTools.findProjectDir(inputPath);
         }
 
         var result = targetPython
-            ? compileToPython(inputPath, outDir)
-            : compileProject(inputPath, outDir);
+            ? PythonCompiler.compileToPython(inputPath, outDir)
+            : JavaCompiler.compileProject(inputPath, outDir);
         switch (result) {
             case Result.Ok<List<Path>> ok -> {
                 for (var f : ok.value()) System.out.println("compiled: " + f);
@@ -121,14 +120,12 @@ public class Main {
                 System.err.println("warning: could not copy stdlib: " + e.getMessage());
             }
 
-            // Read zinc.toml for project metadata + deps
             ZincConfig config = null;
             var configFile = ZincConfig.findConfigFile(inputPath);
             if (configFile != null) {
                 try { config = ZincConfig.parse(configFile); }
                 catch (IOException e) { /* non-fatal */ }
             }
-            // Also check cwd
             if (config == null) {
                 var cwdConfig = Path.of("zinc.toml");
                 if (Files.exists(cwdConfig)) {
@@ -137,16 +134,14 @@ public class Main {
                 }
             }
 
-            // Generate requirements.txt
             if (config != null && !config.pythonDeps.isEmpty()) {
                 try {
                     Files.writeString(outDir.resolve("requirements.txt"), config.toRequirementsTxt());
                 } catch (IOException e) { /* non-fatal */ }
             }
 
-            // Generate pyproject.toml for pip-installable package
             try {
-                var pyproject = buildPyProjectToml(config, outDir);
+                var pyproject = PythonCompiler.buildPyProjectToml(config, outDir);
                 Files.writeString(outDir.resolve("pyproject.toml"), pyproject);
             } catch (IOException e) { /* non-fatal */ }
 
@@ -160,48 +155,43 @@ public class Main {
         // If Mill project, run mill compile after transpilation
         if (projectDir != null) {
             System.out.println("mill compile");
-            int exitCode = runMill(projectDir, "compile");
+            int exitCode = BuildTools.runMill(projectDir, "compile");
             if (exitCode != 0) System.exit(exitCode);
 
             if (nativeImage) {
-                // Build native binary via native-image
                 System.out.println("building native image...");
-                exitCode = runNativeImage(projectDir, outDir);
+                exitCode = BuildTools.runNativeImage(projectDir, outDir);
                 if (exitCode != 0) System.exit(exitCode);
             }
 
-            // Fat jar
             if (fatJar) {
                 System.out.println("building fat jar...");
-                runMill(projectDir, "assembly");
+                BuildTools.runMill(projectDir, "assembly");
             }
 
-            // Packaged app (jpackage + jlink = bundled JVM)
             if (packageApp) {
                 System.out.println("building packaged app...");
-                int pkgExit = buildPackagedApp(projectDir);
+                int pkgExit = BuildTools.buildPackagedApp(projectDir);
                 if (pkgExit != 0) System.exit(pkgExit);
             }
 
-            // Docker
             if (docker) {
                 System.out.println("building Docker image...");
-                int dkrExit = buildDocker(projectDir);
+                int dkrExit = BuildTools.buildDocker(projectDir);
                 if (dkrExit != 0) System.exit(dkrExit);
             }
 
             System.out.println("build complete: " + projectDir + " (Mill project)");
         } else if (nativeImage) {
-            // Single-file native build: javac first, then native-image
-            var javacResult = runJavac(result.unwrap(), outDir);
+            var javacResult = JavaCompiler.runJavac(result.unwrap(), outDir);
             if (javacResult.isErr()) {
                 for (var e : ((Result.Err<?>) javacResult).errors()) System.err.println(e);
                 System.exit(1);
             }
-            String mainClass = findMainClass(result.unwrap(), outDir);
+            String mainClass = JavaCompiler.findMainClass(result.unwrap(), outDir);
             if (mainClass != null) {
                 System.out.println("building native image...");
-                int exitCode = runNativeImage(mainClass, outDir);
+                int exitCode = BuildTools.runNativeImage(mainClass, outDir);
                 if (exitCode != 0) System.exit(exitCode);
             }
         }
@@ -215,12 +205,10 @@ public class Main {
             System.exit(1);
         }
 
-        // Parse flags
         boolean targetPython = false;
         String input = null;
         String mainFile = null;
         var runArgs = new ArrayList<String>();
-        boolean pastFlags = false;
 
         for (int i = 0; i < args.size(); i++) {
             var arg = args.get(i);
@@ -235,7 +223,6 @@ public class Main {
             }
         }
 
-        // Default input to src/ for Python projects, or current .zn file
         if (input == null && targetPython) {
             if (Files.isDirectory(Path.of("src"))) {
                 input = "src";
@@ -250,20 +237,17 @@ public class Main {
 
         var inputPath = Path.of(input);
 
-        // Python target: transpile → copy stdlib → install deps → python
+        // Python target
         if (targetPython) {
-            // Check for zinc.toml project config
             ZincConfig config = null;
             var configFile = ZincConfig.findConfigFile(inputPath);
             if (configFile != null) {
                 try {
                     config = ZincConfig.parse(configFile);
-                    // Use project root's src/ as input if input is a directory
                     if (input.equals("src") || Files.isDirectory(inputPath)) {
                         var projectRoot = configFile.getParent();
                         inputPath = projectRoot.resolve("src");
                     }
-                    // Use main from config if not specified on CLI
                     if (mainFile == null) mainFile = config.main;
                 } catch (IOException e) {
                     System.err.println("warning: could not read zinc.toml: " + e.getMessage());
@@ -271,7 +255,7 @@ public class Main {
             }
 
             var outDir = Path.of("/tmp/zinc-run-py-" + inputPath.getFileName().toString().replace(".zn", ""));
-            var compileResult = compileToPython(inputPath, outDir);
+            var compileResult = PythonCompiler.compileToPython(inputPath, outDir);
             if (compileResult.isErr()) {
                 for (var e : ((Result.Err<?>) compileResult).errors()) System.err.println("error: " + e);
                 System.exit(1);
@@ -279,7 +263,6 @@ public class Main {
             try { ZincStdlib.copyPythonStdlib(outDir.resolve("app")); }
             catch (IOException e) { System.err.println("warning: could not copy stdlib: " + e.getMessage()); }
 
-            // Write requirements.txt if deps exist
             if (config != null && !config.pythonDeps.isEmpty()) {
                 try {
                     Files.writeString(outDir.resolve("requirements.txt"), config.toRequirementsTxt());
@@ -287,7 +270,7 @@ public class Main {
             }
 
             var pyFiles = compileResult.unwrap();
-            Path mainPy = findMainPy(pyFiles, inputPath, mainFile);
+            Path mainPy = PythonCompiler.findMainPy(pyFiles, inputPath, mainFile);
             if (mainPy == null) {
                 System.err.println("error: could not determine entry point");
                 if (Files.isDirectory(inputPath)) {
@@ -297,309 +280,49 @@ public class Main {
             }
 
             String moduleName = "app." + mainPy.getFileName().toString().replace(".py", "");
-            System.exit(runPythonProject(outDir, moduleName, config, runArgs));
+            System.exit(PythonCompiler.runPythonProject(outDir, moduleName, config, runArgs));
             return;
         }
 
-        // Check for Mill project (directory with build.mill.yaml)
+        // Java target — check for Mill project
         if (Files.isDirectory(inputPath)) {
-            var projectDir = findProjectDir(inputPath);
+            var projectDir = BuildTools.findProjectDir(inputPath);
             if (projectDir != null) {
-                // Mill project: transpile → mill run
-                var outDir = inputPath; // transpile in-place (Mill expects src/)
-                var compileResult = compileProject(inputPath, outDir);
+                var outDir = inputPath;
+                var compileResult = JavaCompiler.compileProject(inputPath, outDir);
                 if (compileResult.isErr()) {
                     for (var e : ((Result.Err<?>) compileResult).errors()) System.err.println("error: " + e);
                     System.exit(1);
                 }
                 System.out.println("mill run");
-                System.exit(runMill(projectDir, "run"));
+                System.exit(BuildTools.runMill(projectDir, "run"));
                 return;
             }
         }
 
-        // Script/single-file mode: compile → javac → java
+        // Script/single-file mode
         var outDir = Path.of("/tmp/zinc-run-" + inputPath.getFileName().toString().replace(".zn", ""));
 
-        var compileResult = compileProject(inputPath, outDir);
+        var compileResult = JavaCompiler.compileProject(inputPath, outDir);
         if (compileResult.isErr()) {
             for (var e : ((Result.Err<?>) compileResult).errors()) System.err.println("error: " + e);
             System.exit(1);
         }
         var javaFiles = compileResult.unwrap();
 
-        var javacResult = runJavac(javaFiles, outDir);
+        var javacResult = JavaCompiler.runJavac(javaFiles, outDir);
         if (javacResult.isErr()) {
             for (var e : ((Result.Err<?>) javacResult).errors()) System.err.println(e);
             System.exit(1);
         }
 
-        String mainClass = findMainClass(javaFiles, outDir);
+        String mainClass = JavaCompiler.findMainClass(javaFiles, outDir);
         if (mainClass == null) {
             System.err.println("error: no main class found");
             System.exit(1);
         }
 
-        System.exit(runJava(mainClass, outDir, runArgs));
-    }
-
-    // --- Compilation pipeline ------------------------------------------------
-
-    /**
-     * Compile a .zn file or directory of .zn files to .java files.
-     * Multi-file: two-pass (collect signatures, then transform with cross-file knowledge).
-     */
-    public static Result<List<Path>> compileProject(Path input, Path outDir) {
-        List<Path> znFiles = new ArrayList<>();
-
-        if (Files.isDirectory(input)) {
-            try (var stream = Files.walk(input)) {
-                stream.filter(p -> p.toString().endsWith(".zn"))
-                    .forEach(znFiles::add);
-            } catch (IOException e) {
-                return Result.err("cannot scan directory " + input + ": " + e.getMessage());
-            }
-        } else {
-            znFiles.add(input);
-        }
-
-        if (znFiles.isEmpty()) {
-            return Result.err("no .zn files found in " + input);
-        }
-
-        // Single file — simple path
-        if (znFiles.size() == 1) {
-            return compileSingleFile(znFiles.getFirst(), outDir);
-        }
-
-        // Multi-file: parse all, collect cross-file info, then transform
-        record ParsedFile(Path path, String className, Ast.Program program) {}
-        var parsed = new ArrayList<ParsedFile>();
-        var allInterfaces = new java.util.HashSet<String>();
-        var allClasses = new java.util.HashSet<String>();
-
-        // Pass 1: parse all files, collect interface/class names
-        for (var znFile : znFiles) {
-            String source;
-            try { source = Files.readString(znFile); }
-            catch (IOException e) { return Result.err("cannot read " + znFile + ": " + e.getMessage()); }
-
-            String className = capitalize(znFile.getFileName().toString().replace(".zn", ""));
-
-            // Infer package from directory relative to source root
-            String pkg = null;
-            var sourceRoot = Files.isDirectory(input) ? input : input.getParent();
-            var relative = sourceRoot.toAbsolutePath().relativize(znFile.toAbsolutePath().getParent());
-            if (relative.getNameCount() > 0 && !relative.toString().isEmpty()) {
-                pkg = relative.toString().replace("/", ".").replace("\\", ".");
-            }
-
-            var lexResult = new Lexer(source).tokenize();
-            if (lexResult.isErr()) return Result.err(((Result.Err<?>) lexResult).errors());
-
-            var parser = new Parser(lexResult.unwrap());
-            var parseResult = parser.parseResult();
-            if (parseResult.isErr()) return Result.err(((Result.Err<?>) parseResult).errors());
-            var program = parseResult.unwrap();
-
-            // Set inferred package if not declared in source
-            if (program.pkg() == null && pkg != null) {
-                program = new Ast.Program(program.sourceFile(), new Ast.PackageDecl(pkg),
-                    program.imports(), program.decls(), program.stmts());
-            }
-
-            parsed.add(new ParsedFile(znFile, className, program));
-
-            for (var decl : program.decls()) {
-                switch (decl) {
-                    case Ast.InterfaceDecl iface -> allInterfaces.add(iface.name());
-                    case Ast.ClassDecl cls -> allClasses.add(cls.name());
-                    case Ast.DataClassDecl data -> allClasses.add(data.name());
-                    case Ast.SealedClassDecl sealed -> {
-                        allClasses.add(sealed.name());
-                        for (var v : sealed.variants()) allClasses.add(v.name());
-                    }
-                    default -> {}
-                }
-            }
-        }
-
-        // Pass 2: transform each file with cross-file interface knowledge
-        var allJavaFiles = new ArrayList<Path>();
-        var emitter = new Emitter();
-
-        for (var pf : parsed) {
-            var typeChecker = new TypeChecker();
-            var typeResult = typeChecker.check(pf.program());
-            var resolvedTypes = typeResult.isOk() ? typeResult.unwrap() : Map.<String, TypeInfo>of();
-
-            var transformer = new Transformer(pf.className(), resolvedTypes);
-            // Register cross-file interfaces
-            for (var ifaceName : allInterfaces) transformer.registerInterface(ifaceName);
-
-            var transformResult = transformer.transformAll(pf.program());
-            if (transformResult.isErr()) return Result.err(((Result.Err<?>) transformResult).errors());
-
-            for (var cu : transformResult.unwrap()) {
-                var emitResult = emitter.emit(cu, outDir);
-                if (emitResult.isErr()) return Result.err(((Result.Err<?>) emitResult).errors());
-                allJavaFiles.add(emitResult.unwrap());
-            }
-        }
-
-        return Result.ok(allJavaFiles);
-    }
-
-    /**
-     * Compile a single .zn file to one or more .java files.
-     */
-    public static Result<List<Path>> compileSingleFile(Path inputFile, Path outDir) {
-        String source;
-        try {
-            source = Files.readString(inputFile);
-        } catch (IOException e) {
-            return Result.err("cannot read " + inputFile + ": " + e.getMessage());
-        }
-
-        String fileName = inputFile.getFileName().toString();
-        String className = capitalize(fileName.replace(".zn", ""));
-
-        // Lex
-        var lexResult = new Lexer(source).tokenize();
-        if (lexResult.isErr()) return Result.err(((Result.Err<?>) lexResult).errors());
-        var tokens = lexResult.unwrap();
-
-        // Parse
-        var parser = new Parser(tokens);
-        var parseResult = parser.parseResult();
-        if (parseResult.isErr()) return Result.err(((Result.Err<?>) parseResult).errors());
-        var program = parseResult.unwrap();
-
-        // Typecheck
-        var typeChecker = new TypeChecker();
-        var typeResult = typeChecker.check(program);
-        var resolvedTypes = typeResult.isOk() ? typeResult.unwrap() : Map.<String, TypeInfo>of();
-
-        // Transform
-        var transformer = new Transformer(className, resolvedTypes);
-        var transformResult = transformer.transformAll(program);
-        if (transformResult.isErr()) return Result.err(((Result.Err<?>) transformResult).errors());
-        var units = transformResult.unwrap();
-
-        // Emit
-        var emitter = new Emitter();
-        var javaFiles = new ArrayList<Path>();
-        for (var cu : units) {
-            var emitResult = emitter.emit(cu, outDir);
-            if (emitResult.isErr()) return Result.err(((Result.Err<?>) emitResult).errors());
-            javaFiles.add(emitResult.unwrap());
-        }
-
-        return Result.ok(javaFiles);
-    }
-
-    // --- Python compilation --------------------------------------------------
-
-    /**
-     * Compile .zn files to Python (.py) instead of Java.
-     * Bypasses Transformer entirely — emits directly from Zinc AST.
-     */
-    public static Result<List<Path>> compileToPython(Path input, Path outDir) {
-        List<Path> znFiles = new ArrayList<>();
-
-        if (Files.isDirectory(input)) {
-            try (var stream = Files.walk(input)) {
-                stream.filter(p -> p.toString().endsWith(".zn"))
-                    .forEach(znFiles::add);
-            } catch (IOException e) {
-                return Result.err("cannot scan directory " + input + ": " + e.getMessage());
-            }
-        } else {
-            znFiles.add(input);
-        }
-
-        if (znFiles.isEmpty()) {
-            return Result.err("no .zn files found in " + input);
-        }
-
-        // Output into app/ subdirectory — avoids Python stdlib name conflicts
-        // when run with `python -m app.<module>`
-        var appDir = outDir.resolve("app");
-        var pyFiles = new ArrayList<Path>();
-        var sourceRoot = Files.isDirectory(input) ? input.toAbsolutePath() : input.toAbsolutePath().getParent();
-
-        // Collect project module paths so imports between .zn files resolve as relative
-        // e.g. src/models/user.zn → "models.user", src/main.zn → "main"
-        var projectModules = new java.util.HashSet<String>();
-        for (var znFile : znFiles) {
-            var rel = sourceRoot.relativize(znFile.toAbsolutePath());
-            String modulePath = rel.toString()
-                .replace(".zn", "").replace("/", ".").replace("\\", ".").toLowerCase();
-            projectModules.add(modulePath);
-            // Also add the directory as a module (for `import models` to match `models/`)
-            if (rel.getNameCount() > 1) {
-                projectModules.add(rel.getParent().toString()
-                    .replace("/", ".").replace("\\", ".").toLowerCase());
-            }
-        }
-
-        // Track directories that need __init__.py
-        var packageDirs = new java.util.HashSet<Path>();
-        packageDirs.add(appDir);
-
-        for (var znFile : znFiles) {
-            String source;
-            try { source = Files.readString(znFile); }
-            catch (IOException e) { return Result.err("cannot read " + znFile + ": " + e.getMessage()); }
-
-            String fileName = znFile.getFileName().toString();
-            String className = capitalize(fileName.replace(".zn", ""));
-
-            // Compute output subdirectory preserving source structure
-            var relPath = sourceRoot.relativize(znFile.toAbsolutePath().getParent());
-            var targetDir = appDir.resolve(relPath);
-            packageDirs.add(targetDir);
-            // Add parent dirs too (for nested packages)
-            var parent = targetDir;
-            while (!parent.equals(appDir) && parent.startsWith(appDir)) {
-                packageDirs.add(parent);
-                parent = parent.getParent();
-            }
-
-            // Lex
-            var lexResult = new Lexer(source).tokenize();
-            if (lexResult.isErr()) return Result.err(((Result.Err<?>) lexResult).errors());
-
-            // Parse
-            var parser = new Parser(lexResult.unwrap());
-            var parseResult = parser.parseResult();
-            if (parseResult.isErr()) return Result.err(((Result.Err<?>) parseResult).errors());
-            var program = parseResult.unwrap();
-
-            // Compute this module's subpackage (e.g. "models" for src/models/user.zn)
-            String modulePkg = relPath.toString().replace("/", ".").replace("\\", ".");
-            if (modulePkg.equals(".")) modulePkg = "";
-
-            // Emit Python (skip TypeChecker and Transformer)
-            var emitter = new PythonEmitter(className);
-            emitter.setProjectModules(projectModules);
-            emitter.setModulePackage(modulePkg);
-            var emitResult = emitter.emit(program, targetDir);
-            if (emitResult.isErr()) return Result.err(((Result.Err<?>) emitResult).errors());
-            pyFiles.add(emitResult.unwrap());
-        }
-
-        // Create __init__.py in every package directory
-        for (var dir : packageDirs) {
-            try {
-                Files.createDirectories(dir);
-                Files.writeString(dir.resolve("__init__.py"), "");
-            } catch (IOException e) {
-                return Result.err("failed to write __init__.py in " + dir + ": " + e.getMessage());
-            }
-        }
-
-        return Result.ok(pyFiles);
+        System.exit(JavaCompiler.runJava(mainClass, outDir, runArgs));
     }
 
     // --- init ----------------------------------------------------------------
@@ -617,7 +340,6 @@ public class Main {
         try {
             Files.createDirectories(dir.resolve("src"));
 
-            // src/main.zn
             Files.writeString(dir.resolve("src/main.zn"), """
                 fn main() {
                     print("Hello from %s!")
@@ -625,7 +347,6 @@ public class Main {
                 """.formatted(name).stripIndent());
 
             if (python) {
-                // zinc.toml for Python projects
                 Files.writeString(dir.resolve("zinc.toml"), """
                     [project]
                     name = "%s"
@@ -637,7 +358,6 @@ public class Main {
                     deps = []
                     """.formatted(name).stripIndent());
 
-                // .gitignore
                 Files.writeString(dir.resolve(".gitignore"), """
                     out/
                     __pycache__/
@@ -652,7 +372,6 @@ public class Main {
             } else {
                 Files.createDirectories(dir.resolve("test"));
 
-                // build.mill.yaml for Java projects
                 Files.writeString(dir.resolve("build.mill.yaml"), """
                     # %s — Zinc project
                     extends: JavaModule
@@ -671,7 +390,6 @@ public class Main {
                     mvnDeps: []
                     """.formatted(name).stripIndent());
 
-                // .gitignore
                 Files.writeString(dir.resolve(".gitignore"), """
                     out/
                     *.class
@@ -690,595 +408,7 @@ public class Main {
         }
     }
 
-    // --- Mill integration ----------------------------------------------------
-
-    /** Find the project root containing build.mill.yaml. */
-    private static Path findProjectDir(Path dir) {
-        var current = dir.toAbsolutePath();
-        while (current != null) {
-            if (Files.exists(current.resolve("build.mill.yaml"))) return current;
-            current = current.getParent();
-        }
-        return null;
-    }
-
-    /** Run a Mill command in the project directory. Uses bundled Mill if available. */
-    private static int runMill(Path projectDir, String command) {
-        try {
-            // Find Mill: bundled jar > system mill
-            var millPath = findBundledMill();
-            List<String> cmd;
-            if (millPath != null) {
-                cmd = List.of(millPath.toString(), command);
-            } else {
-                cmd = List.of("mill", command);
-            }
-            var process = new ProcessBuilder(cmd)
-                .directory(projectDir.toFile())
-                .inheritIO()
-                .start();
-            return process.waitFor();
-        } catch (Exception e) {
-            System.err.println("failed to run mill: " + e.getMessage());
-            System.err.println("install mill: curl -L https://raw.githubusercontent.com/com-lihaoyi/mill/main/mill > mill && chmod +x mill");
-            return 1;
-        }
-    }
-
-    /** Find bundled Mill launcher relative to zinc binary location. */
-    private static Path findBundledMill() {
-        try {
-            var zincDir = Path.of(Main.class.getProtectionDomain().getCodeSource().getLocation().toURI()).getParent();
-            for (var candidate : List.of(
-                zincDir.resolve("mill"),
-                zincDir.resolve("lib/mill"),
-                zincDir.resolve("../lib/mill"))) {
-                if (Files.exists(candidate)) return candidate;
-            }
-        } catch (Exception e) { /* ignore */ }
-
-        var jarDir = Path.of(System.getProperty("user.dir"));
-        var candidate = jarDir.resolve("lib/mill");
-        if (Files.exists(candidate)) return candidate;
-
-        return null;
-    }
-
-    // --- native-image --------------------------------------------------------
-
-    /** Build native binary from a classpath directory. */
-    private static int runNativeImage(String mainClass, Path classDir) {
-        var outputName = mainClass.toLowerCase();
-        try {
-            var cmd = List.of(
-                "native-image", "--enable-preview",
-                "-cp", classDir.toString(),
-                "-o", classDir.resolve(outputName).toString(),
-                "--no-fallback", "-O2", "-march=native",
-                mainClass);
-            var process = new ProcessBuilder(cmd).inheritIO().start();
-            int exitCode = process.waitFor();
-            if (exitCode == 0) {
-                System.out.println("native binary: " + classDir.resolve(outputName));
-            }
-            return exitCode;
-        } catch (Exception e) {
-            System.err.println("native-image not found. Install GraalVM JDK 25.");
-            return 1;
-        }
-    }
-
-    /** Build native binary from a Mill project using mill classpath + native-image. */
-    private static int runNativeImage(Path projectDir, Path outDir) {
-        // Get classpath from Mill
-        try {
-            var cpProcess = new ProcessBuilder("mill", "show", "runClasspath")
-                .directory(projectDir.toFile())
-                .redirectErrorStream(true)
-                .start();
-            var cpOutput = new String(cpProcess.getInputStream().readAllBytes());
-            cpProcess.waitFor();
-
-            // Parse classpath entries from Mill output
-            var cpEntries = new ArrayList<String>();
-            for (var line : cpOutput.split("[,\\[\\]\"]")) {
-                line = line.trim();
-                if (line.startsWith("ref:") || line.startsWith("qref:")) {
-                    // Extract path after the last colon
-                    var path = line.substring(line.lastIndexOf(':') + 1);
-                    if (Files.exists(Path.of(path))) cpEntries.add(path);
-                }
-            }
-            // Add compiled classes
-            var classesDir = projectDir.resolve("out/compile.dest/classes");
-            if (Files.exists(classesDir)) cpEntries.addFirst(classesDir.toString());
-
-            if (cpEntries.isEmpty()) {
-                System.err.println("error: could not determine classpath from Mill");
-                return 1;
-            }
-
-            var classpath = String.join(":", cpEntries);
-
-            // Find main class from build.mill.yaml
-            String mainClass = "Main";
-            var buildYaml = projectDir.resolve("build.mill.yaml");
-            if (Files.exists(buildYaml)) {
-                for (var line : Files.readAllLines(buildYaml)) {
-                    if (line.trim().startsWith("mainClass:")) {
-                        mainClass = line.trim().substring("mainClass:".length()).trim();
-                        break;
-                    }
-                }
-            }
-
-            // Derive binary name from project directory
-            var binaryName = projectDir.getFileName().toString().toLowerCase().replace("-", "");
-
-            // Get reachability metadata for dependencies
-            var metadataArgs = NativeImageConfig.buildNativeImageArgs(cpEntries);
-
-            var cmd = new ArrayList<>(List.of(
-                "native-image", "--enable-preview",
-                "-cp", classpath,
-                "-o", projectDir.resolve(binaryName).toString(),
-                "--no-fallback", "-O2", "-march=native"));
-            cmd.addAll(metadataArgs);
-
-            // Run tracing agent if no metadata found for some deps
-            if (metadataArgs.isEmpty() && cpEntries.size() > 1) {
-                System.out.println("no bundled metadata — running tracing agent...");
-                var tracingDir = NativeImageConfig.runTracingAgent(mainClass, classpath, projectDir);
-                if (tracingDir != null) {
-                    cmd.add("-H:ConfigurationFileDirectories=" + tracingDir);
-                }
-            }
-
-            cmd.add(mainClass);
-
-            System.out.println("native-image: " + mainClass + " → " + binaryName);
-            var process = new ProcessBuilder(cmd).inheritIO().start();
-            int exitCode = process.waitFor();
-            if (exitCode == 0) {
-                var binary = projectDir.resolve(binaryName);
-                System.out.println("native binary: " + binary + " (" +
-                    Files.size(binary) / 1024 / 1024 + "MB)");
-            }
-            return exitCode;
-        } catch (Exception e) {
-            System.err.println("native-image failed: " + e.getMessage());
-            return 1;
-        }
-    }
-
-    // --- jpackage + jlink ----------------------------------------------------
-
-    /**
-     * Build a packaged app with bundled minimal JVM via jpackage.
-     * jdeps detects modules → jpackage bundles only what's needed.
-     */
-    private static int buildPackagedApp(Path projectDir) {
-        try {
-            // Step 1: Build fat jar via Mill
-            runMill(projectDir, "assembly");
-            var fatJar = projectDir.resolve("out/assembly.dest/out.jar");
-            if (!Files.exists(fatJar)) {
-                System.err.println("error: fat jar not found at " + fatJar);
-                return 1;
-            }
-
-            // Step 2: Detect required modules via jdeps
-            var jdepsProcess = new ProcessBuilder(
-                "jdeps", "--print-module-deps", "--ignore-missing-deps",
-                "--multi-release", "25", fatJar.toString())
-                .redirectErrorStream(true).start();
-            var modules = new String(jdepsProcess.getInputStream().readAllBytes()).trim();
-            jdepsProcess.waitFor();
-
-            if (modules.isEmpty() || modules.contains("Error")) {
-                // Fallback: common modules for server apps
-                modules = "java.base,java.desktop,java.instrument,java.management,java.naming,java.security.jgss,java.sql";
-            }
-            System.out.println("modules: " + modules);
-
-            // Step 3: Find main class
-            String mainClass = "Main";
-            var buildYaml = projectDir.resolve("build.mill.yaml");
-            if (Files.exists(buildYaml)) {
-                for (var line : Files.readAllLines(buildYaml)) {
-                    if (line.trim().startsWith("mainClass:"))
-                        mainClass = line.trim().substring("mainClass:".length()).trim();
-                }
-            }
-
-            // Step 4: jpackage
-            var appName = projectDir.getFileName().toString().toLowerCase().replace("-", "");
-            var cmd = List.of(
-                "jpackage",
-                "--type", "app-image",
-                "--name", appName,
-                "--input", fatJar.getParent().toString(),
-                "--main-jar", fatJar.getFileName().toString(),
-                "--main-class", mainClass,
-                "--dest", projectDir.resolve("dist").toString(),
-                "--add-modules", modules,
-                "--java-options", "--enable-preview",
-                "--jlink-options", "--strip-debug --no-man-pages --no-header-files --compress=zip-6");
-
-            System.out.println("jpackage: " + appName);
-            var process = new ProcessBuilder(cmd).inheritIO().start();
-            int exitCode = process.waitFor();
-            if (exitCode == 0) {
-                var dist = projectDir.resolve("dist/" + appName);
-                System.out.println("packaged app: " + dist);
-                // Show size
-                try (var walk = Files.walk(dist)) {
-                    long totalSize = walk.filter(Files::isRegularFile).mapToLong(p -> {
-                        try { return Files.size(p); } catch (IOException e) { return 0; }
-                    }).sum();
-                    System.out.println("total size: " + totalSize / 1024 / 1024 + "MB");
-                }
-            }
-            return exitCode;
-        } catch (Exception e) {
-            System.err.println("jpackage failed: " + e.getMessage());
-            return 1;
-        }
-    }
-
-    // --- Docker ---------------------------------------------------------------
-
-    private static int buildDocker(Path projectDir) {
-        try {
-            // Build fat jar first
-            runMill(projectDir, "assembly");
-            var fatJar = projectDir.resolve("out/assembly.dest/out.jar");
-
-            var appName = projectDir.getFileName().toString().toLowerCase();
-
-            // Find main class
-            String mainClass = "Main";
-            var buildYaml = projectDir.resolve("build.mill.yaml");
-            if (Files.exists(buildYaml)) {
-                for (var line : Files.readAllLines(buildYaml)) {
-                    if (line.trim().startsWith("mainClass:"))
-                        mainClass = line.trim().substring("mainClass:".length()).trim();
-                }
-            }
-
-            // Detect modules for jlink
-            var jdepsProcess = new ProcessBuilder(
-                "jdeps", "--print-module-deps", "--ignore-missing-deps",
-                "--multi-release", "25", fatJar.toString())
-                .redirectErrorStream(true).start();
-            var modules = new String(jdepsProcess.getInputStream().readAllBytes()).trim();
-            jdepsProcess.waitFor();
-            if (modules.isEmpty() || modules.contains("Error")) {
-                modules = "java.base,java.desktop,java.instrument,java.management,java.naming,java.security.jgss,java.sql";
-            }
-
-            // Generate multi-stage Dockerfile: jlink JRE on distroless
-            var dockerfile = projectDir.resolve("Dockerfile");
-            Files.writeString(dockerfile, """
-                # Stage 1: Build minimal JRE with jlink (JDK only needed here)
-                FROM eclipse-temurin:25-jdk-alpine AS jre-build
-                RUN jlink --add-modules %s \\
-                    --strip-debug --no-man-pages --no-header-files --compress=zip-6 \\
-                    --output /custom-jre
-
-                # Stage 2: Distroless base — no shell, no package manager, minimal attack surface
-                FROM gcr.io/distroless/base-nossl-debian12:nonroot
-                COPY --from=jre-build /custom-jre /jre
-                WORKDIR /app
-                COPY %s app.jar
-                EXPOSE 8080
-                ENTRYPOINT ["/jre/bin/java", "--enable-preview", "-jar", "app.jar"]
-                """.formatted(modules, fatJar.getFileName()));
-
-            // Build
-            var cmd = List.of("docker", "build", "-t", appName, "-f", dockerfile.toString(), fatJar.getParent().toString());
-            System.out.println("docker build: " + appName);
-            var process = new ProcessBuilder(cmd).inheritIO().start();
-            return process.waitFor();
-        } catch (Exception e) {
-            System.err.println("docker build failed: " + e.getMessage());
-            return 1;
-        }
-    }
-
-    // --- javac ----------------------------------------------------------------
-
-    private static Result<Void> runJavac(List<Path> javaFiles, Path outDir) {
-        var compiler = javax.tools.ToolProvider.getSystemJavaCompiler();
-        if (compiler == null) {
-            return Result.err("javac not available — jdk.compiler module missing");
-        }
-
-        try {
-            Files.createDirectories(outDir);
-        } catch (IOException e) {
-            return Result.err("cannot create output dir: " + e.getMessage());
-        }
-
-        var fileManager = compiler.getStandardFileManager(null, null, null);
-        var sourceFiles = fileManager.getJavaFileObjectsFromPaths(javaFiles);
-        var options = List.of(
-            "--enable-preview", "--source", "25",
-            "-d", outDir.toString());
-
-        var diagnostics = new javax.tools.DiagnosticCollector<javax.tools.JavaFileObject>();
-        var task = compiler.getTask(null, fileManager, diagnostics, options, null, sourceFiles);
-        boolean success = task.call();
-
-        try { fileManager.close(); } catch (IOException e) { /* ignore */ }
-
-        if (!success) {
-            var errors = new StringBuilder("javac failed:\n");
-            for (var d : diagnostics.getDiagnostics()) {
-                if (d.getKind() == javax.tools.Diagnostic.Kind.ERROR) {
-                    errors.append(d.toString()).append("\n");
-                }
-            }
-            return Result.err(errors.toString());
-        }
-
-        return Result.ok(null);
-    }
-
-    // --- java ----------------------------------------------------------------
-
-    /**
-     * Run a compiled class in-process via class loading.
-     * No external java process needed — zinc is self-contained.
-     */
-    private static int runJava(String mainClass, Path classDir, List<String> args) {
-        try {
-            var classLoader = new java.net.URLClassLoader(
-                new java.net.URL[]{classDir.toUri().toURL()},
-                ClassLoader.getSystemClassLoader());
-            var clazz = classLoader.loadClass(mainClass);
-            var main = clazz.getMethod("main", String[].class);
-            main.invoke(null, (Object) args.toArray(new String[0]));
-            return 0;
-        } catch (java.lang.reflect.InvocationTargetException e) {
-            if (e.getCause() != null) {
-                e.getCause().printStackTrace();
-            }
-            return 1;
-        } catch (Exception e) {
-            System.err.println("failed to run " + mainClass + ": " + e.getMessage());
-            return 1;
-        }
-    }
-
-    private static String buildPyProjectToml(ZincConfig config, Path outDir) {
-        String name = config != null ? config.name : outDir.getFileName().toString();
-        String version = config != null ? config.version : "0.1.0";
-        String pyVersion = config != null ? config.pythonVersion : ">=3.14";
-        String mainModule = config != null ? config.main.replace(".zn", "").toLowerCase() : "main";
-        var deps = config != null ? config.pythonDeps : List.<String>of();
-
-        var sb = new StringBuilder();
-        sb.append("[project]\n");
-        sb.append("name = \"").append(name).append("\"\n");
-        sb.append("version = \"").append(version).append("\"\n");
-        sb.append("requires-python = \"").append(pyVersion).append("\"\n");
-        if (!deps.isEmpty()) {
-            sb.append("dependencies = [\n");
-            for (var dep : deps) sb.append("    \"").append(dep).append("\",\n");
-            sb.append("]\n");
-        } else {
-            sb.append("dependencies = []\n");
-        }
-        sb.append("\n[project.scripts]\n");
-        sb.append(name).append(" = \"app.").append(mainModule).append(":main\"\n");
-        return sb.toString();
-    }
-
-    // --- python --------------------------------------------------------------
-
-    /**
-     * Find the main .py file to run.
-     *
-     * Resolution order:
-     * 1. --main flag (explicit entry point)
-     * 2. Single file input (the only file)
-     * 3. File matching input name (concurrency.zn → zn_concurrency.py)
-     * 4. main.zn convention (→ zn_main.py)
-     * 5. null (error — user must specify --main)
-     */
-    private static Path findMainPy(List<Path> pyFiles, Path inputPath, String mainFile) {
-        if (pyFiles.isEmpty()) return null;
-
-        // 1. Explicit --main flag
-        if (mainFile != null) {
-            String target = mainFile.replace(".zn", ".py").toLowerCase();
-            for (var f : pyFiles) {
-                if (f.getFileName().toString().equals(target)) return f;
-            }
-            System.err.println("error: --main " + mainFile + " not found in transpiled output");
-            return null;
-        }
-
-        // 2. Single file — obvious
-        if (pyFiles.size() == 1) return pyFiles.getFirst();
-
-        // 3. Match by input filename (single .zn file, not directory)
-        if (!Files.isDirectory(inputPath)) {
-            String target = inputPath.getFileName().toString().replace(".zn", ".py").toLowerCase();
-            for (var f : pyFiles) {
-                if (f.getFileName().toString().equals(target)) return f;
-            }
-        }
-
-        // 4. Convention: main.zn → main.py
-        for (var f : pyFiles) {
-            if (f.getFileName().toString().equals("main.py")) return f;
-        }
-
-        // 5. Directory with multiple files and no main — error
-        return null;
-    }
-
-    /**
-     * Run a Python project. Uses uv if available, falls back to pip + python.
-     *
-     * uv path:  uv run --project outDir -m app.module [args]
-     *           uv handles venv, deps (from requirements.txt), and execution.
-     *
-     * pip path: pip install -q -r requirements.txt && python -m app.module [args]
-     */
-    private static int runPythonProject(Path outDir, String moduleName, ZincConfig config, List<String> args) {
-        boolean hasUv = hasCommand("uv");
-
-        if (hasUv) {
-            return runWithUv(outDir, moduleName, config, args);
-        } else {
-            return runWithPip(outDir, moduleName, config, args);
-        }
-    }
-
-    private static int runWithUv(Path outDir, String moduleName, ZincConfig config, List<String> args) {
-        String uv = findBundledTool("uv");
-        try {
-            // Generate pyproject.toml for uv (it needs this for --project)
-            var pyproject = new StringBuilder();
-            pyproject.append("[project]\n");
-            pyproject.append("name = \"zinc-app\"\n");
-            pyproject.append("version = \"0.0.1\"\n");
-            pyproject.append("requires-python = \"").append(config != null ? config.pythonVersion : ">=3.10").append("\"\n");
-            if (config != null && !config.pythonDeps.isEmpty()) {
-                pyproject.append("dependencies = [\n");
-                for (var dep : config.pythonDeps) {
-                    pyproject.append("    \"").append(dep).append("\",\n");
-                }
-                pyproject.append("]\n");
-            } else {
-                pyproject.append("dependencies = []\n");
-            }
-            Files.writeString(outDir.resolve("pyproject.toml"), pyproject.toString());
-
-            // Request free-threading Python (3.14t) — real thread parallelism, no GIL
-            var cmd = new ArrayList<>(List.of(uv, "run", "--python", "3.14t", "--project", outDir.toString(), "-m", moduleName));
-            cmd.addAll(args);
-
-            var proc = new ProcessBuilder(cmd)
-                .inheritIO()
-                .directory(outDir.toFile())
-                .start();
-            return proc.waitFor();
-        } catch (Exception e) {
-            System.err.println("uv run failed: " + e.getMessage());
-            return 1;
-        }
-    }
-
-    private static int runWithPip(Path outDir, String moduleName, ZincConfig config, List<String> args) {
-        String python = findPython();
-        if (python == null) {
-            System.err.println("error: python3 not found. Install Python 3.10+ or uv to use --python");
-            return 1;
-        }
-
-        // Install deps if requirements.txt exists
-        var reqs = outDir.resolve("requirements.txt");
-        if (Files.exists(reqs)) {
-            try {
-                var pip = new ProcessBuilder(python, "-m", "pip", "install", "-q", "-r", reqs.toString())
-                    .inheritIO().start();
-                int exit = pip.waitFor();
-                if (exit != 0) System.err.println("warning: pip install failed");
-            } catch (Exception e) {
-                System.err.println("warning: could not install deps: " + e.getMessage());
-            }
-        }
-
-        // Run
-        try {
-            var cmd = new ArrayList<>(List.of(python, "-m", moduleName));
-            cmd.addAll(args);
-
-            var proc = new ProcessBuilder(cmd)
-                .inheritIO()
-                .directory(outDir.toFile())
-                .start();
-            return proc.waitFor();
-        } catch (Exception e) {
-            System.err.println("failed to run python: " + e.getMessage());
-            return 1;
-        }
-    }
-
-    private static String findPython() {
-        for (var candidate : List.of("python3.14t", "python3.14", "python3.13", "python3.12", "python3.11", "python3.10", "python3", "python")) {
-            if (hasCommand(candidate)) return candidate;
-        }
-        return null;
-    }
-
-    /**
-     * Find a tool bundled alongside the zinc binary (e.g. uv, mill).
-     * Checks: same dir as zinc jar → lib/ → system PATH.
-     */
-    private static String findBundledTool(String name) {
-        // Check next to the running jar
-        try {
-            var jarPath = Main.class.getProtectionDomain().getCodeSource().getLocation().toURI();
-            var jarDir = Path.of(jarPath).getParent();
-            if (jarDir != null) {
-                var bundled = jarDir.resolve(name);
-                if (Files.isExecutable(bundled)) return bundled.toString();
-                // jpackage puts tools in the input dir alongside the jar
-                var libBundled = jarDir.resolve("../lib/app/" + name);
-                if (Files.isExecutable(libBundled)) return libBundled.toRealPath().toString();
-            }
-        } catch (Exception e) { /* fall through */ }
-
-        // Check lib/ in cwd
-        var local = Path.of("lib", name);
-        if (Files.isExecutable(local)) return local.toAbsolutePath().toString();
-
-        // Fall back to system PATH
-        return name;
-    }
-
-    private static boolean hasCommand(String cmd) {
-        // Check bundled path first
-        String resolved = cmd.equals("uv") ? findBundledTool("uv") : cmd;
-        try {
-            var proc = new ProcessBuilder(resolved, "--version")
-                .redirectErrorStream(true)
-                .start();
-            proc.getInputStream().readAllBytes(); // drain
-            return proc.waitFor() == 0;
-        } catch (Exception e) {
-            return false;
-        }
-    }
-
     // --- Helpers --------------------------------------------------------------
-
-    private static String findMainClass(List<Path> javaFiles, Path outDir) {
-        for (var f : javaFiles) {
-            try {
-                var content = Files.readString(f);
-                if (content.contains("public static void main(")) {
-                    // Extract class name from file
-                    var name = f.getFileName().toString().replace(".java", "");
-                    // Include package if present
-                    var relative = outDir.relativize(f);
-                    if (relative.getNameCount() > 1) {
-                        var pkg = relative.getParent().toString().replace("/", ".").replace("\\", ".");
-                        return pkg + "." + name;
-                    }
-                    return name;
-                }
-            } catch (IOException e) {
-                // skip
-            }
-        }
-        return null;
-    }
 
     static String capitalize(String s) {
         if (s.isEmpty()) return s;
